--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
         "cheerio": "^1.0.0-rc.2",
         "commander": "^2.17.1",
         "fs-extra": "^7.0.0",
-        "request": "^2.88.0"
+        "request": "^2.88.0",
+        "request-promise": "^4.2.2",
+        "semver": "^5.5.0"
     },
     "devDependencies": {
         "eslint": "^5.3.0"
@@ -38,6 +40,9 @@
     "homepage": "https://github.com/lisniuse/cdnlib",
     "keywords": [
         "cli",
+        "install",
+        "modules",
+        "package manager",
         "library",
         "package",
         "javascript",
@@ -45,6 +50,6 @@
         "cdn"
     ],
     "cdnConfig": {
-        "domain": "cdnjs.com"
+        "defaultCdnName": "cdnjs"
     }
 }
